--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -41,4 +41,8 @@ jobs:
           username: ${{ secrets.REMOTE_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
-          script: echo "test"
+          script: |
+            cd ~/www/dev
+            git pull origin main
+            git status
+            npm install --only=prod
