--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -29,20 +29,15 @@ jobs:
       run: composer install --prefer-dist --no-progress
 
   deployment:
-    name: Deploy project
-    environment: production
-    needs: build
+    name: Deploy to Server
     runs-on: ubuntu-latest
-    steps:
-      - name: Deploy using SSH
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          script: |
-            cd ~/www/dev
-            git pull origin main
-            git status
-            npm install --only=prod
+    environment: production
+    - uses: easingthemes/ssh-deploy@main
+      with:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        ARGS: "-rlgoDzvc -i --delete"
+        REMOTE_HOST: ${{ secrets.HOST }}
+        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+        TARGET: ${{ secrets.REMOTE_TARGET }}
+        SCRIPT_AFTER: |
+        echo "deployed successfully"
