--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,6 +30,7 @@ jobs:
 
   deployment:
     name: Deploy to Server
+    needs: build
     runs-on: ubuntu-latest
     environment: production
     steps: 
