--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -34,6 +34,10 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps: 
+      name: get lastest code
+      - uses: actions/checkout@v3
+
+      name: Sync files 
       - uses: easingthemes/ssh-deploy@main
         with:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
@@ -41,3 +45,4 @@ jobs:
           REMOTE_HOST: ${{ secrets.HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
+          EXCLUDE: "/dist/, /node_modules/, /vendor/, .env.*"
