--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -53,6 +53,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: 🚚 Checkout Repository
+        uses: actions/checkout@v3
+
       # - name: Deploy using SSH
       #   uses: appleboy/ssh-action@v1.0.0
       #   with:
