--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -52,28 +52,6 @@ jobs:
       - name: 🚚 Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Cache Composer packages
-        id: composer-cache
-        uses: actions/cache@v3
-        with:
-          path: vendor
-          key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-php-
-      
-      - name: Install dependencies
-        run: | 
-          composer install --optimize-autoloader --no-dev
-          php artisan optimize
-
-      - name: Cache Npm packages
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-
       - name: 📂 Sync files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
@@ -81,7 +59,7 @@ jobs:
           username: root@jorisbourguet.fr
           server-dir: ~/www/dev/
           password: ${{ secrets.FTP_PASSWORD }}
-          exclude: |
+          exclude: |cd /ww
             **/.git*
             **/.git*/**
             .env
